# sqs_sns_fundamentals

./: .gitignore  Cargo.toml  Makefile  config.toml  docker-compose.yml
labs/lab1_sqs_hello_queue/: Cargo.toml  README.md  config.toml
labs/lab1_sqs_hello_queue/src/: lib.rs
labs/lab2_message_attributes_fifo/: Cargo.toml  README.md  config.toml
shared/: Cargo.toml
shared/src/: cli.rs  config.rs  lib.rs  logging.rs  sqs.rs
