[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
config = { workspace = true }
anyhow = { workspace = true }
aws-config = { workspace = true }
aws-sdk-sqs = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true }
aws-credential-types = { workspace = true }

[[bin]]
name = "bootstrap"
path = "src/bin/bootstrap.rs"

[[bin]]
name = "teardown"
path = "src/bin/teardown.rs"

[[bin]]
name = "purge"
path = "src/bin/purge.rs"

[[bin]]
name = "send"
path = "src/bin/send.rs"

[[bin]]
name = "recv"
path = "src/bin/recv.rs"
