[package]
name = "lab2_message_attributes_fifo"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../../shared" }
aws-sdk-sqs = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[[bin]]
name = "send_attrs"
path = "src/bin/send_attrs.rs"

[[bin]]
name = "send_fifo"
path = "src/bin/send_fifo.rs"
